# calculus-tools

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
calculus_tools/: __init__.py
calculus_tools/clients/: __init__.py  airtable_client.py  analytics_client.py  bigquery_client.py  calendar_client.py  cms_client.py  discord_client.py  enrichment_client.py  ghl_client.py  github_client.py  google_ads_client.py  google_workspace_client.py  hubspot_client.py  image_gen_client.py  linkedin_client.py  meta_ads_client.py  meta_client.py  microsoft365_client.py  notion_client.py  ocr_client.py  pdf_client.py  pipeline_client.py  push_notification_client.py  quickbooks_client.py  salesforce_client.py  search_client.py  sendgrid_client.py  shopify_client.py  slack_client.py  stripe_client.py  survey_client.py  transcription_client.py  translation_client.py  twilio_client.py  twilio_sms_client.py  twilio_voice_client.py  unified_client.py  vault_client.py  vector_db_client.py  video_gen_client.py  (+5 more)
calculus_tools/ghg/: __init__.py
calculus_tools/providers/: __init__.py  tavily_grok_provider.py
calculus_tools/registry/: __init__.py  import_seed.py  models.py  seed_apis.csv  seed_apis.json  store.py
calculus_tools/sendgrid/: __init__.py
calculus_tools/tools/: __init__.py  alpha_vantage_tool.py  api_intelligence.py  code_review_copilot.py  copilot_tool.py  courtlistener_tool.py  finnhub_tool.py  ghg_tool.py  grokpedia_tool.py  newsapi_tool.py  opencorporates_tool.py  pubchem_tool.py  scout_tool.py  sec_edgar_tool.py  sendgrid_tool.py  usda_fooddata_tool.py  wikipedia_tool.py
calculus_tools/utils/: __init__.py  dedupe.py  normalizers.py  rate_limiter.py  scoring_helpers.py  validators.py
tests/: test_tools.py
