[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculus-tools"
version = "2.1.0"
description = "Shared AI tools, providers, and API clients for the Calculus Holdings ecosystem"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25",
    "requests>=2.31",
    "pydantic>=2.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
crewai = ["crewai>=1.0"]
db = ["asyncpg>=0.29"]
all = ["crewai>=1.0", "asyncpg>=0.29"]

[tool.setuptools.packages.find]
include = ["calculus_tools*"]
