[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculus-tools"
version = "2.4.0"
description = "Shared AI tools, providers, API clients, and registry for the Calculus Holdings ecosystem"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
keywords = ["ai", "crewai", "grok", "api-registry", "calculus"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25",
    "requests>=2.31",
    "pydantic>=2.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
crewai = ["crewai>=1.0"]
db = ["asyncpg>=0.29"]
sendgrid = ["sendgrid>=6.11.0"]
all = ["crewai>=1.0", "asyncpg>=0.29", "sendgrid>=6.11.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.urls]
Repository = "https://github.com/financecommander/calculus-tools"

[tool.setuptools.packages.find]
include = ["calculus_tools*"]

[tool.setuptools.package-data]
"calculus_tools.registry" = ["seed_apis.json", "seed_apis.csv"]
